--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,78 @@
-.venv/
-
-venv/
-
-.env
-
-env/
-
+# Python
 __pycache__/
+*.py[cod]
+*$py.class
+*.pyo
+*.pyd
+.Python
+env/
+venv/
+.venv/
+pip-log.txt
+pip-delete-this-directory.txt
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.log
+.mypy_cache/
+.pytest_cache/
+.ruff_cache/
 
+# Flask
+instance/
+.webassets-cache
+.flaskenv
+
+# Database
+linkvault.db
+*.sqlite3
+*.db
+
+# Virtual Environment
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# VS Code
+.vscode/
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# IDE
+.idea/
+*.iml
+*.ipr
+*.iws
+
+# OS
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# Logs
+logs/
+*.log
+
+# Build
+build/
+dist/
+*.egg-info/
+
+# Secrets
+config_local.py
+.env
+.env.local
+
+# Migrations (only if you want to reset DB on clone)
+migrations/
+
+# CLI script (optional — keep if team uses it)
+# linkvault
