--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ colorama==0.4.6
 Flask==3.1.2
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
+WTForms==3.1.1
 greenlet==3.2.4
 idna==3.11
 itsdangerous==2.2.0
